--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
         "@testing-library/user-event": "^13.5.0",
         "@theme-toggles/react": "^4.1.0",
         "axios": "^1.3.2",
+        "dotenv": "^16.0.3",
         "gh-pages": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -22,8 +23,6 @@
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
